Modernize the build and cleanup the repository content (#2)
https://github.com/eclipse-datatools/datatools/issues/1